# spica

./: Cargo.toml  LICENSE  README.md  table.sql  user_example.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
