[package]
name = "spica"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.3"
reqwest = {  version = "0.13.2", features = ["form", "cookies", "json"] }
reqwest_cookie_store = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1", features = ["full"] }
